syntax = "proto3";

package com.carbonplayer;

option java_package = "com.carbonplayer.model.entity.proto.identifiers";
option java_outer_classname = "ArtistIdV1Proto";
option optimize_for = LITE_RUNTIME;

message ArtistId {

    oneof type {
        CatalogArtistId catalog = 1;
    }
}

message CatalogArtistId {
    string metajamCompactKey = 1;
}